--- a/authapp-core/build.gradle
+++ b/authapp-core/build.gradle
@@ -39,8 +39,6 @@ configurations {
 
 
 dependencies {
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
 
     compile("com.migesok:jaxb-java-time-adapters:1.1.3")        // Date and time XML adapters
     compile("org.apache.commons:commons-lang3")
@@ -48,19 +46,16 @@ dependencies {
     compile("org.springframework.data:spring-data-jpa")
     compile("org.springframework.security:spring-security-core")
     compile("org.hibernate:hibernate-entitymanager")
-    compile("org.hibernate:hibernate-validator")
     compile "com.mysema.querydsl:querydsl-core"
     compile "com.mysema.querydsl:querydsl-jpa"                  // Querydsl support JPA
     querydslapt "com.mysema.querydsl:querydsl-apt"              // Querydsl support annotation processing
     //compile("com.h2database:h2")
     compile("com.fasterxml.jackson.core:jackson-databind")
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
-
+    compile("mysql:mysql-connector-java")
     compile("org.jadira.usertype:usertype.core:4.0.0.GA")
     compile("org.jadira.usertype:usertype.extended:4.0.0.GA")
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+
 }
 
 apply from: "liquibase.gradle"
