Update - Working login

--- a/authapp-api/auth/src/main/resources/application.properties
+++ b/authapp-api/auth/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Common JPA, Hibernate, and JDBC settings
 
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_app?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=R718645j
+spring.datasource.password=revehr
 
 # Tomcat JDBC connection pooling
 
@@ -25,6 +25,12 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 # Hibernate naming strategy
 spring.jpa.hibernate.naming_strategy=com.norulesweb.authapp.core.common.HibernateUppercaseNamingStrategy
+
+# security.user.name=admin
+# security.user.password=123456
+security.basic.enabled=false
+# security.sessions=stateless
+
 
 jwt.header=Authorization
 jwt.secret=123456
