--- a/authapp-api/build.gradle
+++ b/authapp-api/build.gradle
@@ -41,6 +41,7 @@ allprojects {
         compile("org.springframework.boot:spring-boot-starter-integration")
         compile("org.springframework.integration:spring-integration-xml")
         compile("org.springframework.integration:spring-integration-http")
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("com.fasterxml.jackson.core:jackson-databind")
         compile("mysql:mysql-connector-java")
         compile("org.jadira.usertype:usertype.core:4.0.0.GA")
