--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /authapp-api/auth/build
 /authapp-core/build
 /authapp-core/src/main/generated
+/authapp-utils/build
+/authapp-utils/core/build
+/authapp-utils/authapp-data-load/build
