--- a/authapp-api/auth/src/main/resources/application.properties
+++ b/authapp-api/auth/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_app?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=revehr
+spring.datasource.password=R718645j
 
 # Tomcat JDBC connection pooling
 
@@ -33,6 +33,8 @@ security.basic.enabled=false
 
 
 jwt.header=Authorization
+jwt.header.user=X-Auth-Username
+jwt.header.password=X-Auth-Password
 jwt.secret=123456
 jwt.expiration=604800
 jwt.route.authentication.path=app-api/user/login
