--- a/authapp-api/build.gradle
+++ b/authapp-api/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'io.spring.gradle:dependency-management-plugin:0.5.4.RELEASE'
+        classpath 'io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE'
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.1.RELEASE")
     }
 }
@@ -36,7 +36,8 @@ allprojects {
     dependencies {
         compile("org.apache.commons:commons-lang3")
         compile("org.springframework.boot:spring-boot-starter-integration")
-        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.security:spring-security-web")
+        compile("org.springframework.boot:spring-boot-starter-tomcat")
         compile("org.springframework.boot:spring-boot-starter-security")
         compile("org.springframework.boot:spring-boot-starter-integration")
         compile("org.springframework.integration:spring-integration-xml")
@@ -46,6 +47,9 @@ allprojects {
         compile("mysql:mysql-connector-java")
         compile("org.jadira.usertype:usertype.core:4.0.0.GA")
         compile("org.jadira.usertype:usertype.extended:4.0.0.GA")
+
+        compile("org.hibernate:hibernate-validator") // Bean validator is required by JPA if not running in a servlet container that provides this
+        compile("org.glassfish:javax.el:3.0.0")      // javax.el implementation is required by JPA if not running in a servlet container that provides this
 
         // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
         compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0'
