--- a/authapp-utils/authapp-data-load/src/main/resources/initializer.properties
+++ b/authapp-utils/authapp-data-load/src/main/resources/initializer.properties
@@ -20,8 +20,8 @@ initialize.user.role.admin=ROLE_ADMIN
 initialize.user.role.user=ROLE_USER
 
 # The bootstrap platform name
-initialize.platform.name=StudentTracker
+initialize.platform.name=AuthApp
 
 # The bootstrap platform description
-initialize.platform.description=Student Tracker for Schools
+initialize.platform.description=AuthApp_for_Apps
 
