--- a/authapp-core/gradle.properties
+++ b/authapp-core/gradle.properties
@@ -8,7 +8,7 @@ liquibaseChangeLog=db/changelog.xml
 dbUser=root
 
 # Database password
-dbPassword=R718645j
+dbPassword=R718645j@
 
 # Database connection URL
 dbUrl=jdbc:mysql://localhost:3306/spring_app
