--- a/authapp-utils/core/src/main/resources/spring-data-application.properties
+++ b/authapp-utils/core/src/main/resources/spring-data-application.properties
@@ -3,7 +3,7 @@
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_app?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=R718645j
+spring.datasource.password=R718645j@
 
 # Tomcat JDBC connection pooling
 
